--- a/index.html
+++ b/index.html
@@ -52,26 +52,21 @@
     <div class="section-title" id="portfolio-title">
       <h3>PORTFOLIO</h3>
     </div>
-    <section class="one-third" id="french-app">
+    <section class="one-half" id="french-app">
       <div class="project" id="project1">
       <a href="https://calm-hamlet-50515.herokuapp.com/" target="_blank"> <img src="img/french-app.png"></a>
       <h4>Flashcard app with registration and login functionality. Coded with PHP, mySQL, JavaScript</h4>
     </div>
     </section>
 
-    <section class="one-third" id="voting-app">
+    <section class="one-half" id="chat-app">
       <div class="project" id="project2">
-      <a href="https://vast-wildwood-94687.herokuapp.com/" target="_blank"> <img src="img/voting-app.png"></a>
-      <h4>A Node.js voting app utilizing Express and MongoDB.</h4>
+      <a href="https://sleepy-island-51347.herokuapp.com" target="_blank"> <img src="img/chat-app.png"></a>
+      <h4>A Node.js chat app utilizing Web Sockets, Node.js, MongoDB.</h4>
     </div>
     </section>
 
-    <section class="one-third" id="react">
-      <div class="project" id="project3">
-      <a href="https://codepen.io/zia/pen/kXELmz" target="_blank"><img src="img/react-spa.png"></a>
-      <h4>A React app to create and store recipes. </h4>
-    </div>
-    </section>
+
   </section>
 
   <section id="contact-container">
