--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="one-half" id="chat-app">
       <div class="project" id="project2">
-      <a href="https://young-earth-95273.herokuapp.com/home" target="_blank"> <img src="img/chat-app.png"></a>
+      <a href="https://young-earth-95273.herokuapp.com" target="_blank"> <img src="img/chat-app.png"></a>
       <h4>A Node.js chat app utilizing Web Sockets, Node.js, MongoDB.</h4>
     </div>
     </section>
