--- a/index.html
+++ b/index.html
@@ -28,57 +28,78 @@
     <div class="section-title">
       <h3>WHAT I'M PASSIONATE ABOUT:</h3>
     </div>
-    <article id="design">
+  <div id="tools-section">
+  <div class="tools">
 
       <div class="devices">
-        <img src="img/security.png">
+        <img class"tools-image" src="img/security.png">
       </div>
-      <h2>Security</h2>
-      <p>Applications should be built with security in mind, such as prevention of SQL injection attacks and using password hashes (and salts).
+      <h2 class="tool-title">Security</h2>
+      <p class="tool-desciption">Applications should be built with security in mind, such as prevention of SQL injection attacks.
       </p>
-    </article>
-    <aside id="jsstack">
+    </div>
+    <div class="tools" id="tools-web">
       <div class="devices">
         <img src="img/php_mysql_node.png">
       </div>
-      <h2>Tools of the Web</h2>
-      <p>PHP and mySQL. Node.js, MongoDB, Express, and React. Use the best tool for the job.
+      <h2 class="tool-title">Tools of the Web</h2>
+      <p>JavaScript, Node.js, MongoDB, Express, and React. PHP and mySQL.  Use the best tool for the job.
       </p>
 
-    </aside>
+    </div>
+    </div>
   </section>
 
   <section class="inner-wrapper-2">
     <div class="section-title" id="portfolio-title">
       <h3>PORTFOLIO</h3>
     </div>
-    <section class="one-half" id="french-app">
+
+    <div id="projects-container">
+
+<a href="https://afternoon-journey-58050.herokuapp.com/" target="_blank">
+      <span class="one-half" id="hotel-app">
+      <div class="project" id="project3">
+      <div class="project-details">Front end design example using React, Redux, and Sass.</div>
+      </div>
+      </span>
+</a>
+
+  <a href="https://young-earth-95273.herokuapp.com" target="_blank">
+      <span class="one-half" id="chat-app">
+        <div class="project" id="project2">
+          <div class="project-details">A Node.js chat app utilizing Web Sockets, Node.js, MongoDB..</div>
+      </div>
+      </span>
+      </a>
+
+<a href="https://calm-hamlet-50515.herokuapp.com/" target="_blank">
+      <span class="one-half" id="french-app">
       <div class="project" id="project1">
-      <a href="https://calm-hamlet-50515.herokuapp.com/" target="_blank"> <img src="img/french-app.png"></a>
-      <h4>Flashcard app with registration and login functionality. Coded with PHP, mySQL, JavaScript</h4>
-    </div>
-    </section>
+      <div class="project-details">Flashcard app with registration and login functionality. Coded with PHP, mySQL, JavaScript
+      </div>
+      </div>
 
-    <section class="one-half" id="chat-app">
-      <div class="project" id="project2">
-      <a href="https://young-earth-95273.herokuapp.com" target="_blank"> <img src="img/chat-app.png"></a>
-      <h4>A Node.js chat app utilizing Web Sockets, Node.js, MongoDB.</h4>
-    </div>
-    </section>
+      </span>
+  </a>
+</div>
+</section>
 
-
-  </section>
-
-  <section id="contact-container">
+<section id="contact-container">
 
     <div class="contact-info">
-      <div id="contact-title">Contact</div>
-      <a href="mailto:anealdev@protonmail.com">anealdev@protonmail.com</a>
-      <p>
-        <a href="https://github.com/anealdev"><img src="img/github.png" alt="github logo"> GitHub</p>
+      <div id="contact-title">CONTACT</div>
+      <div id="contact-link">
+      <a class="link" href="mailto:anealdev@protonmail.com">anealdev@protonmail.com</a>
+      </div>
+
+      <div id="github">
+        <a href="https://github.com/anealdev"><img src="img/github.png" alt="github logo">
+          <h3 id="github-link">GitHub</h3>
 			</a>
     </div>
-  </section>
+    </div>
+</section>
 
 </body>
 
