--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <a href="https://young-earth-95273.herokuapp.com" target="_blank">
       <span class="one-half" id="chat-app">
         <div class="project" id="project2">
-          <div class="project-details">A Node.js chat app utilizing Web Sockets, Node.js, MongoDB..</div>
+          <div class="project-details">A Node.js chat app utilizing Web Sockets, Node.js, MongoDB.</div>
       </div>
       </span>
       </a>
