--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="img/php_mysql_node.png">
       </div>
       <h2 class="tool-title">Tools of the Web</h2>
-      <p>JavaScript, Node.js, MongoDB, Express, and React. PHP and mySQL.  Use the best tool for the job.
+      <p>JavaScript, Node.js, MongoDB, Express, and React. PHP and mySQL.  Use the best tool.
       </p>
 
     </div>
